--- a/templates/_parts/project_card.html.twig
+++ b/templates/_parts/project_card.html.twig
@@ -25,8 +25,8 @@
 
     <div class="card_pills">
         <div class="pills-list">
-            {% for language in project.codingLanguages %}
-                <a class="pill" href="">{{ language.label }}</a>
+            {% for codingLanguage in project.codingLanguages %}
+                <a class="pill" href="{{ path('coding_language', {'slug': codingLanguage.slug}) }}">{{ codingLanguage.label }}</a>
             {% endfor %}
         </div>
     </div>
