created Author collection + links on view & cards

--- a/templates/_parts/author_card.html.twig
+++ b/templates/_parts/author_card.html.twig
@@ -9,7 +9,7 @@
     {% endif %}
 
     <div class="card_title">
-        <a href="">
+        <a href="{{ path('author_projects', {'id': author.id}) }}">
             <h3>{{ author.fullName }}</h3>
         </a>
     </div>
