--- a/templates/_parts/project_card.html.twig
+++ b/templates/_parts/project_card.html.twig
@@ -31,7 +31,7 @@
     <div class="card_pills">
         <div class="pills-list">
             {% for codingLanguage in project.codingLanguages %}
-                <a class="pill" href="{{ path('coding_language', {'slug': codingLanguage.slug}) }}">
+                <a class="pill" href="{{ path('coding_language_projects', {'slug': codingLanguage.slug}) }}">
                     {{ codingLanguage.label }}
                 </a>
             {% endfor %}
