Created comments section on Project show

--- a/templates/_parts/author_card.html.twig
+++ b/templates/_parts/author_card.html.twig
@@ -3,7 +3,7 @@
     <hr>
     
     {% if author.avatar is defined %}
-        <div class="show_avatar">
+        <div class="card_avatar">
             <img src="{{ author.avatar }}" alt="Image for project: {{ project.title }}">
         </div>
     {% endif %}
