--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,17 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Projects{% endblock %}
+{% block title %}
+	Projects
+{% endblock %}
 
 {% block body %}
 
-<h1>Projects</h1>
+	<h1>Projects</h1>
 
-{% for project in projects %}
-    <div class="collection">
-        {% include "_parts/project_card.html.twig" with {
-            'entity': project
-        } %}
-    </div>
-{% endfor %}
+	<div class="collection">
+
+		{% for project in projects %}
+			{% include "_parts/project_card.html.twig" %}
+		{% endfor %}
+
+		<div class="pagination">
+			{{ knp_pagination_render(projects) }}
+		</div>
+
+	</div>
 
 {% endblock %}
