--- a/templates/author/projects.html.twig
+++ b/templates/author/projects.html.twig
@@ -10,7 +10,7 @@
 
 	{% for project in projects %}
 		<div class="collection">
-			{% include "_parts/project_card.html.twig" %}
+			{% include "_parts/card_project.html.twig" %}
 		</div>
 	{% endfor %}
 
