--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -1,74 +1,79 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ project.title }}{% endblock %}
+{% block title %}
+	{{ project.title }}
+{% endblock %}
 
 {% block body %}
 
-<div class="show_img">
-    <img src="{{ project.mainImage }}" alt="Image for project: {{ project.title }}">
-</div>
+	<div class="show_img">
+		<img src="{{ project.mainImage }}" alt="Image for project: {{ project.title }}">
+	</div>
 
-<h1>{{ project.title }}</h1>
+	<h1>{{ project.title }}</h1>
 
-<div class="show_data">
-    <span>{{ project.createdAt|date('m/d/Y') }}</span>
-   <span> | By </span>
-    <a href="{{ path('author_projects', {'id': project.author.id}) }}">{{ project.author.fullName }}</a>
-</div>
+	<div class="show_data">
+		<span>{{ project.createdAt|date('m/d/Y') }}</span>
+		<span>
+			| By
+		</span>
+		<a href="{{ path('author_projects', {'id': project.author.id}) }}">{{ project.author.fullName }}</a>
+	</div>
 
-<div class="show_pills">
-    <div class="pills-list">
-        <span>In: </span>
-        {% for category in project.categories %}
-            <a class="pill" href="{{ path('project_category', {slug:category.slug}) }}">
-                {{ category.label }}
-            </a>
-        {% endfor %}
-    </div>
-</div>
+	<div class="show_pills">
+		<div class="pills-list">
+			<span>In:
+			</span>
+			{% for category in project.categories %}
+				<a class="pill" href="{{ path('project_category', {slug:category.slug}) }}">
+					{{ category.label }}
+				</a>
+			{% endfor %}
+		</div>
+	</div>
 
-<div class="card_pills">
-    <div class="pills-list">
-        <span>
-            {% if project.codingLanguages|length > 1 %}
-                Languages: 
-            {% else %}
-                Language:
-            {% endif %}
-        </span>
-        {% for codingLanguage in project.codingLanguages %}
-            <a class="pill" href="{{ path('coding_language_projects', {'slug': codingLanguage.slug}) }}">
-                {{ codingLanguage.label }}
-            </a>
-        {% endfor %}
-    </div>
-</div>
+	<div class="card_pills">
+		<div class="pills-list">
+			<span>
+				{% if project.codingLanguages|length > 1 %}
+					Languages:
+				{% else %}
+					Language:
+				{% endif %}
+			</span>
+			{% for codingLanguage in project.codingLanguages %}
+				<a class="pill" href="{{ path('coding_language_projects', {'slug': codingLanguage.slug}) }}">
+					{{ codingLanguage.label }}
+				</a>
+			{% endfor %}
+		</div>
+	</div>
 
-{% if project.description is not null %}
-    <div class="show_description">
-        {{ project.description }}
-    </div>
-{% endif %}
+	{% if project.description is not null %}
+		<div class="show_description">
+			{{ project.description }}
+		</div>
+	{% endif %}
 
-<hr>
+	<hr>
 
-<div class="show_content">
-    {{ project.content }}
-</div>
+	<div class="show_content">
+		{{ project.content }}
+	</div>
 
-<div class="show_author">
-    {% include "_parts/author_card.html.twig" with {
+	<div class="show_author">
+		{% include "_parts/card_author.html.twig" with {
         'author': project.author
     } %}
-</div>
+	</div>
 
-{% if project.comments|length > 0 %}
-    <div class="show_comments">
-        <h3>Comments</h3>
-        {% for comment in project.comments %}
-            {% include "_parts/comment_card.html.twig" %}
-        {% endfor %}
-    </div>
-{% endif %}
+	{% if project.comments|length > 0 %}
+		<div class="show_comments">
+			<h3>Comments</h3>
+			{% for comment in project.comments %}
+				{% include "_parts/card_comment.html.twig" %}
+			{% endfor %}
+		</div>
+	{% endif %}
 
 {% endblock %}
