Added header & footer (basic)

--- a/templates/author/lessons.html.twig
+++ b/templates/author/lessons.html.twig
@@ -10,7 +10,7 @@
 
 	{% for lesson in lessons %}
 		<div class="collection">
-			{% include "_parts/card_lesson.html.twig" %}
+			{% include "_parts/card/lesson.html.twig" %}
 		</div>
 	{% endfor %}
 
