--- a/templates/coding_language/lessons.html.twig
+++ b/templates/coding_language/lessons.html.twig
@@ -11,7 +11,7 @@
 	<div class="collection">
 
 		{% for lesson in lessons %}
-			{% include "_parts/card_lesson.html.twig" %}
+			{% include "_parts/card/lesson.html.twig" %}
 		{% endfor %}
 
 		<div class="pagination">
