--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="show_author">
-		{% include "_parts/card_author.html.twig" with {
+		{% include "_parts/card/author.html.twig" with {
         'author': lesson.author
     } %}
 	</div>
@@ -53,7 +53,7 @@
 		<div class="show_comments">
 			<h3>Comments</h3>
 			{% for comment in lesson.comments %}
-				{% include "_parts/card_comment.html.twig" %}
+				{% include "_parts/card/comment.html.twig" %}
 			{% endfor %}
 		</div>
 	{% endif %}
