--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -11,7 +11,7 @@
 	<div class="collection">
 
 		{% for post in posts %}
-			{% include "_parts/card_post.html.twig" %}
+			{% include "_parts/card/post.html.twig" %}
 		{% endfor %}
 
 		<div class="pagination">
