--- a/templates/author/posts.html.twig
+++ b/templates/author/posts.html.twig
@@ -10,7 +10,7 @@
 
 	{% for post in posts %}
 		<div class="collection">
-			{% include "_parts/card_post.html.twig" %}
+			{% include "_parts/card/post.html.twig" %}
 		</div>
 	{% endfor %}
 
