--- a/templates/coding_language/projects.html.twig
+++ b/templates/coding_language/projects.html.twig
@@ -11,7 +11,7 @@
 	<div class="collection">
 
 		{% for project in projects %}
-			{% include "_parts/card_project.html.twig" %}
+			{% include "_parts/card/project.html.twig" %}
 		{% endfor %}
 
 		<div class="pagination">
