--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -62,7 +62,7 @@
 	</div>
 
 	<div class="show_author">
-		{% include "_parts/card_author.html.twig" with {
+		{% include "_parts/card/author.html.twig" with {
         'author': project.author
     } %}
 	</div>
@@ -71,7 +71,7 @@
 		<div class="show_comments">
 			<h3>Comments</h3>
 			{% for comment in project.comments %}
-				{% include "_parts/card_comment.html.twig" %}
+				{% include "_parts/card/comment.html.twig" %}
 			{% endfor %}
 		</div>
 	{% endif %}
