Create Contact page

--- a/templates/_parts/menu/header_main.html.twig
+++ b/templates/_parts/menu/header_main.html.twig
@@ -3,8 +3,8 @@
     5: {type: 'link', label: 'Portfolio', url: path('projects')},
     10: {type: 'link', label: 'Lessons', url: path('lessons')},
     15: {type: 'link', label: 'Blog', url: path('posts')},
-    20: {type: 'link', label: 'About', url: '#'},
-    25: {type: 'link', label: 'Contact', url: '#'},
+    20: {type: 'link', label: 'About', url: path('about')},
+    25: {type: 'link', label: 'Contact', url: path('contact')},
 } %}
 
 <ul class="menu header_main">
