--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -1,11 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-	Home
+{% block title %}About
 {% endblock %}
 
 {% block body %}
-
-	<h1>Home</h1>
-
+	<h1>About</h1>
 {% endblock %}
