--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Projects
+	Portfolio
 {% endblock %}
 
 {% block body %}
 
-	<h1>Projects</h1>
+	<h1>Portfolio</h1>
 
 	<div class="collection">
 
