--- a/templates/_parts/card/comment.html.twig
+++ b/templates/_parts/card/comment.html.twig
@@ -1,13 +1,15 @@
 <div class="card comment">
 
-    <div class="card_data">
-        <span class="name">{{ comment.user.email|safeEmail }}</span>
-        <span class="date"> | {{ comment.createdAt|date('m/d/Y (H:i)') }}</span>
-    </div>
+	<div class="card_data">
+		<span class="name">{{ comment.fullName }}</span>
+		<span class="date">
+			|
+			{{ comment.createdAt|date('m/d/Y (H:i)') }}</span>
+	</div>
 
-    <div class="card_content">
-        {{ comment.content }}
-    </div>
+	<div class="card_content">
+		{{ comment.content }}
+	</div>
 
 </div>
 
