--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -8,27 +8,32 @@
 
 	<h1>Contact</h1>
 
-	<div class="section">
+	<div class="section container">
 		<h2>Send me an email</h2>
 
 		{{ form_start(contactForm) }}
 		{{ form_widget(contactForm) }}
-		<button type="submit" class="btn primary">Send</button>
+		<button type="submit" class="primary">Send</button>
 		{{ form_end(contactForm) }}
 	</div>
 
-	<div class="section">
+	<div class="section container">
 		<h2>Other ways to contact me</h2>
 		<ul class="unstyled">
-			<li>Phone: (+48) 727 775 824</li>
+			<li>Phone:
+				{{ config('CONTACT_PHONE') }}
+			</li>
 			<li>Email:
 				<a href="{{ 'mailto:' ~ config('CONTACT_EMAIL') }}">
 					{{ config('CONTACT_EMAIL')|safeEmail(false) }}
 				</a>
 			</li>
-			<li>LinkedIn
+			<li>
+				<a href="{{ config('SOCIAL_LINKEDIN') }}">LinkedIn</a>
 			</li>
-			<li>Address: Helclów 9/5A, 31-148 Kraków (Polska)</li>
+			<li>Address:
+				{{ config('CONTACT_ADDRESS') }}
+			</li>
 		</ul>
 	</div>
 
