--- a/templates/_parts/footer.html.twig
+++ b/templates/_parts/footer.html.twig
@@ -1,8 +1,8 @@
 <br><hr>
 
 © {{ date()|date('Y') }}, {{ config('SITE_NAME') }}
-
+{% include "_parts/menu/footer_main.html.twig" %}
 
 </body>
 
-</html>
+</html> 
