--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -48,10 +48,10 @@
 			{% endfor %}
 		</div>
 	</div>
-
-	{% if project.description is not null %}
-		<div class="show_description">
-			{{ project.description }}
+	
+	{% if project.headline is not null %}
+		<div class="show_headline">
+			{{ project.headline }}
 		</div>
 	{% endif %}
 
