Security Login setup

--- a/templates/_parts/menu/footer_main.html.twig
+++ b/templates/_parts/menu/footer_main.html.twig
@@ -1,5 +1,5 @@
 {% set menuItems = {
-    0: {type: 'link', label: 'Admin', url: path('admin')},
+    0: {type: 'link', label: 'Login', url: path('app_login')},
 } %}
     
 <div class="menu header_main">
