Fixed Twig-Lint errors after push

--- a/templates/admin/_breadcrumbs.html.twig
+++ b/templates/admin/_breadcrumbs.html.twig
@@ -14,7 +14,8 @@
             %}
         {% endif %}
         {% for subItem in item.subItems %}
-            {% if subItem.subIndex is same as(eaConst('SUBMENU_INDEX', ea.request)|int) and if subItem.linkUrl is not same as(menuItemUrl) %}
+            {% if subItem.subIndex is same as(eaConst('SUBMENU_INDEX', ea.request)|int) %}
+                {% if subItem.linkUrl is not same as(menuItemUrl) %}
                     {% set submenuItemLabel = subItem.label %}
                     {% set submenuItemUrl = subItem.linkUrl %}
                 {% endif %}
