Before remove breadcrumbs

--- a/templates/admin/default/layout.html.twig
+++ b/templates/admin/default/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_title %}{{ block('content_title') }} - {{ config('SITE_NAME') }}{% endblock %}
 
-{% block content_header %}
+{# {% block content_header %}
     {% include "admin/_breadcrumbs.html.twig" %}
     {{ parent() }}
-{% endblock %}
+{% endblock %} #}
