--- a/templates/admin/_breadcrumbs.html.twig
+++ b/templates/admin/_breadcrumbs.html.twig
@@ -16,9 +16,7 @@
             %}
         {% endif %}
         {% for subItem in item.subItems %}
-            {% set subItemIndex = eaConst('SUBMENU_INDEX', ea.request)|int %}
-            {% if subItem.subIndex is same as(subItemIndex) 
-            and if subItem.linkUrl is not same as(menuItemUrl) %}
+            {% if subItem.subIndex is same as(eaConst('SUBMENU_INDEX', ea.request)|int) and if subItem.linkUrl is not same as(menuItemUrl) %}
                 {% set submenuItemLabel = subItem.label %}
                 {% set submenuItemUrl = subItem.linkUrl %}
             {% endif %}
