--- a/templates/admin/_breadcrumbs.html.twig
+++ b/templates/admin/_breadcrumbs.html.twig
@@ -1,62 +1,5 @@
 {# @var ea \EasyCorp\Bundle\EasyAdminBundle\Context\AdminContext #}
 
-{% set menuItem = '' %}
-{% set menuItemLabel, menuItemUrl, submenuItemLabel, submenuItemUrl = null, null, null, null %}
-{% for item in ea.mainMenu.items %}
-    {% set itemIndex = eaConst('MENU_INDEX', ea.request)|int %}
-    {% if item.index is same as(itemIndex) %}
-        {% set menuItem = item %}
-        {% set menuItemLabel = item.label %}
-        {% set menuItemUrl = item.linkUrl is not empty ? item.linkUrl : null %}
-        {% if menuItemUrl is null and item.subItems is not empty %}
-            {% set actionIndex = eaConst('INDEX', null, 'Action') %}
-            {% set menuItemUrl = item.subItems.0.routeParameters.crudAction is same as(actionIndex) 
-                ? item.subItems.0.linkUrl 
-                : null 
-            %}
-        {% endif %}
-        {% for subItem in item.subItems %}
-            {% if subItem.subIndex is same as(eaConst('SUBMENU_INDEX', ea.request)|int) and if subItem.linkUrl is not same as(menuItemUrl) %}
-                {% set submenuItemLabel = subItem.label %}
-                {% set submenuItemUrl = subItem.linkUrl %}
-            {% endif %}
-        {% endfor %}
-    {% endif %}
-{% endfor %}
-
-{% set breadcrumbs = {
-    level0: {label: 'Dashboard', path: 'admin'},
-    level1: {label: menuItemLabel, url: menuItemUrl},
-    level2: {label: submenuItemLabel, url: submenuItemUrl} 
-} %}
-{% set lastIndexUrl = breadcrumbs.level2.path is defined ? path(breadcrumbs.level2.path) : breadcrumbs.level2.url ?? null  %}
-
-
-<div class="breadcrumbs small mb-2">
-
-    {% for index, link in breadcrumbs %}
-
-        {% set url = link.path is defined ? path(link.path) : link.url ?? null %}
-        {% set isNotFirst = index is not same as('level0') ? true : false %}
-        {% set hasLink = true %}
-        {% if index is same as('level2') 
-            or (breadcrumbs.level2.label is null 
-            and index is same as('level1'))
-        %}
-            {% set hasLink = false %}
-        {% endif %}
-
-        {% if link.label is not null %}
-            {% if isNotFirst %} » {% endif %}
-            {% if hasLink %}<a href="{{ url }}">{% endif %}
-                {{ link.label }}
-            {% if hasLink %}</a>{% endif %}
-        {% endif %}
-
-    {% endfor %}
-
+<div class="breadcrumbs">
+    <a href="{{ ea.request.headers.get('referer') }}">« Go back</a>
 </div>
-
-{# <div class="breadcrumbs">
-    <a href="{{ ea.request.headers.get('referer') }}">Go back</a>
-</div> #}
