Fixed EasyAdmin Author Delete FK issue

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -6,14 +6,13 @@
 
     <section class="content-header">
         <div class="title">
-            <h1>Welcome
-                {% if user.firstname is defined and not null %} {{ user.firstname}}{% endif %}
+            <h1>Welcome {{ eaAuthorName(author) }}
             </h1>
         </div>
     </section>
 
     <section class="content-body">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quisquam ipsum reiciendis pariatur ea saepe, accusantium adipisci exercitationem blanditiis molestias commodi error consectetur. Et voluptates eveniet veniam at illum nulla!
+        This is your {{ user.getRoles|higherRole }} dashboard.
     </section>
     
 </article>
