--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -8,10 +8,12 @@
 
 <div class="show_data">
 	<span>{{ lesson.createdAt|date('m/d/Y') }}</span>
-	<span>
-			| By
-		</span>
-	<a href="{{ path('author_lessons', {'id': lesson.author.id}) }}">{{ lesson.author.fullName }}</a>
+	{% if lesson.author is not null %}
+		<span>
+				| By
+			</span>
+		<a href="{{ path('author_lessons', {'id': lesson.author.id}) }}">{{ lesson.author.fullName }}</a>
+	{% endif %}
 </div>
 
 <div class="show_pills">
@@ -35,7 +37,7 @@
 	</div>
 </div>
 
-{% if post.headline is not null %}
+{% if lesson.headline is not null %}
 <div class="show_headline">
 	{{ project.headline }}
 </div>
@@ -47,11 +49,14 @@
 	{{ lesson.content }}
 </div>
 
-<div class="show_author">
-	{% include "_parts/card/author.html.twig" with {
-	'author': lesson.author
-	} %}
-</div>
+{% if lesson.author is not null %}
+	<div class="show_author">
+		{% include "_parts/card/author.html.twig" with {
+		'author': lesson.author
+		} %}
+	</div>
+{% endif %}
+
 
 {% if lesson.comments|length > 0 %}
 <div class="show_comments">
