--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -14,10 +14,12 @@
 
 	<div class="show_data">
 		<span>{{ project.createdAt|date('m/d/Y') }}</span>
-		<span>
-			| By
-		</span>
-		<a href="{{ path('author_projects', {'id': project.author.id}) }}">{{ project.author.fullName }}</a>
+		{% if project.author is not null %}
+			<span>
+				| By
+			</span>
+			<a href="{{ path('author_projects', {'id': project.author.id}) }}">{{ project.author.fullName }}</a>
+		{% endif %}
 	</div>
 
 	<div class="show_pills">
@@ -61,11 +63,13 @@
 		{{ project.content }}
 	</div>
 
-	<div class="show_author">
-		{% include "_parts/card/author.html.twig" with {
-        'author': project.author
-    } %}
-	</div>
+	{% if project.author is not null %}
+		<div class="show_author">
+			{% include "_parts/card/author.html.twig" with {
+			'author': project.author
+		} %}
+		</div>
+	{% endif %}
 
 	{% if project.comments|length > 0 %}
 		<div class="show_comments">
