--- a/templates/_parts/card/lesson.html.twig
+++ b/templates/_parts/card/lesson.html.twig
@@ -8,31 +8,35 @@
 
 	<div class="card_data">
 		<span>{{ lesson.createdAt|date('m/d/Y') }}</span>
-		<span>
-			| By
+		{% if lesson.author is not null %}
+			<span> | By </span>
 			<a href="{{ path('author_lessons', {'id': lesson.author.id}) }}">
 				{{ lesson.author.fullName }}
 			</a>
-		</span>
+		{% endif %}
 	</div>
 
-	<div class="card_pills">
-		<div class="pills-list">
-			{% for category in lesson.categories %}
-			<a class="pill" href="{{ path('lesson_category', {slug:category.slug}) }}">
-				{{ category.label }}
-			</a>
-			{% endfor %}
+	{% if lesson.categories|length > 0 %}
+		<div class="card_pills">
+			<div class="pills-list">
+				{% for category in lesson.categories %}
+				<a class="pill" href="{{ path('lesson_category', {slug:category.slug}) }}">
+					{{ category.label }}
+				</a>
+				{% endfor %}
+			</div>
 		</div>
-	</div>
+	{% endif %}
 
-	<div class="card_pills">
-		<div class="pills-list">
-			<a class="pill" href="{{ path('coding_language_lessons', {'slug': lesson.codingLanguage.slug}) }}">
-				{{ lesson.codingLanguage.label }}
-			</a>
+	{% if lesson.codingLanguage is not null %}
+		<div class="card_pills">
+			<div class="pills-list">
+				<a class="pill" href="{{ path('coding_language_lessons', {'slug': lesson.codingLanguage.slug}) }}">
+					{{ lesson.codingLanguage.label }}
+				</a>
+			</div>
 		</div>
-	</div>
+	{% endif %}
 
 	<div class="card_extract">
 		{% if lesson.headline is not null %}
