--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -4,60 +4,62 @@
 
 {% block body %}
 
-{% if post.mainImage is not null %}
-<div class="show_img">
-	<img src="{{ post.mainImage }}" alt="Image for post: {{ post.title }}">
-</div>
-{% endif %}
-
-<h1>{{ post.title }}</h1>
-
-<div class="show_data">
-	<span>{{ post.createdAt|date('m/d/Y') }}</span>
-	{% if  post.author is not null %}
-		<span> | By </span>
-		<a href="{{ path('author_posts', {'id': post.author.id}) }}">{{ post.author.fullName }}</a>
+	{% if post.mainImage is not null %}
+		<div class="show_img">
+			<img src="{{ post.mainImage }}" alt="Image for post: {{ post.title }}">
+		</div>
 	{% endif %}
-</div>
 
-<div class="show_pills">
-	<div class="pills-list">
-		<span>In: </span>
-		{% for category in post.categories %}
-		<a class="pill" href="{{ path('post_category', {slug:category.slug}) }}">
-			{{ category.label }}
-		</a>
-		{% endfor %}
+	<h1>{{ post.title }}</h1>
+
+	<div class="show_data">
+		<span>{{ post.createdAt|date('m/d/Y') }}</span>
+		{% if  post.author is not null %}
+			<span> | By </span>
+			<a href="{{ path('author_posts', {'id': post.author.id}) }}">{{ post.author.fullName }}</a>
+		{% endif %}
 	</div>
-</div>
 
-{% if post.headline is not null %}
-<div class="show_headline">
-	{{ post.headline }}
-</div>
-{% endif %}
+	{% if post.categories|length > 0 %}
+		<div class="show_pills">
+			<div class="pills-list">
+				<span>In: </span>
+				{% for category in post.categories %}
+				<a class="pill" href="{{ path('post_category', {slug:category.slug}) }}">
+					{{ category.label }}
+				</a>
+				{% endfor %}
+			</div>
+		</div>
+	{% endif %}
 
-<hr>
+	{% if post.headline is not null %}
+		<div class="show_headline">
+			{{ post.headline }}
+		</div>
+	{% endif %}
 
-<div class="show_content">
-	{{ post.content }}
-</div>
+	<hr>
 
-{% if  post.author is not null %}
-	<div class="show_author">
-		{% include "_parts/card/author.html.twig" with {
-		'author': post.author
-		} %}
+	<div class="show_content">
+		{{ post.content }}
 	</div>
-{% endif %}
 
-{% if post.comments|length > 0 %}
-<div class="show_comments">
-	<h3>Comments</h3>
-	{% for comment in post.comments %}
-	{% include "_parts/card/comment.html.twig" %}
-	{% endfor %}
-</div>
-{% endif %}
+	{% if  post.author is not null %}
+		<div class="show_author">
+			{% include "_parts/card/author.html.twig" with {
+			'author': post.author
+			} %}
+		</div>
+	{% endif %}
+
+	{% if post.comments|length > 0 %}
+		<div class="show_comments">
+			<h3>Comments</h3>
+			{% for comment in post.comments %}
+			{% include "_parts/card/comment.html.twig" %}
+			{% endfor %}
+		</div>
+	{% endif %}
 
 {% endblock %}
