Created Author registration form

--- a/templates/_parts/menu/footer_main.html.twig
+++ b/templates/_parts/menu/footer_main.html.twig
@@ -1,5 +1,6 @@
 {% set menuItems = {
     0: {type: 'link', label: 'Login', url: path('app_login')},
+	5: {type: 'link', label: 'Become an author', url: path('author_register')},
 } %}
     
 <div class="menu header_main">
