--- a/templates/lesson_category/index.html.twig
+++ b/templates/lesson_category/index.html.twig
@@ -8,6 +8,11 @@
 
 	<h1>"{{ category.label }}" Lessons</h1>
 
+	{% if category.description is not null %}
+		<div class="page_headline">
+			{{ category.description }}
+		</div>
+	{% endif %}
 
 	<div class="collection">
 
