Update Author registration system if user is connected

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -12,7 +12,7 @@
     </section>
 
     <section class="content-body">
-        This is your {{ user.getRoles|higherRole }} dashboard.
+        This is your {{ user|higherRole }} dashboard.
     </section>
     
 </article>
