--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -53,13 +53,6 @@
 		</div>
 	{% endif %}
 
-	{% if post.comments|length > 0 %}
-		<div class="show_comments">
-			<h3>Comments</h3>
-			{% for comment in post.comments %}
-			{% include "_parts/card/comment.html.twig" %}
-			{% endfor %}
-		</div>
-	{% endif %}
+	{% include "_parts/comments_section.html.twig" with {postType: post} %}
 
 {% endblock %}
