--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -75,13 +75,6 @@
 		</div>
 	{% endif %}
 
-	{% if project.comments|length > 0 %}
-		<div class="show_comments">
-			<h3>Comments</h3>
-			{% for comment in project.comments %}
-				{% include "_parts/card/comment.html.twig" %}
-			{% endfor %}
-		</div>
-	{% endif %}
+	{% include "_parts/comments_section.html.twig" with {postType: project} %}
 
 {% endblock %}
