--- a/templates/lesson/show.html.twig
+++ b/templates/lesson/show.html.twig
@@ -8,7 +8,7 @@
 
 	<div class="show_data">
 		<span>{{ lesson.createdAt|date('m/d/Y') }}</span>
-		{% if lesson.author is not null %}
+		{% if lesson|hasApprovedAuthor %}
 			<span> | By </span>
 			<a href="{{ path('author_lessons', {'id': lesson.author.id}) }}">{{ lesson.author.fullName }}</a>
 		{% endif %}
@@ -48,10 +48,10 @@
 	<hr>
 
 	<div class="show_content">
-		{{ lesson.content }}
+		{{ lesson.content|raw }}
 	</div>
 
-	{% if lesson.author is not null %}
+	{% if lesson|hasApprovedAuthor %}
 		<div class="show_author">
 			{% include "_parts/card/author.html.twig" with {
 			'author': lesson.author
