Added feature 'Moderate Authors registration'

--- a/templates/admin/default/layout.html.twig
+++ b/templates/admin/default/layout.html.twig
@@ -3,6 +3,6 @@
 {% block page_title %}{{ block('content_title') }} - {{ config('SITE_NAME') }}{% endblock %}
 
 {% block content_header %}
-    {% include "admin/_breadcrumbs.html.twig" %}
+    {% include "admin/_parts/breadcrumbs.html.twig" %}
     {{ parent() }}
 {% endblock %}
