--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -13,6 +13,15 @@
 
     <section class="content-body">
         This is your {{ user|higherRole }} dashboard.
+
+        <div class="row mt-4">
+            {% if cardApproveAuthors.authors|length > 0 %}
+                {% include "admin/_parts/card/authors_waiting_list.html.twig" with {
+                    data: cardApproveAuthors
+                } %}
+            {% endif %}
+        </div>
+
     </section>
     
 </article>
